[package]
name = "video_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.5"
m3u8 = "0.1.0"
m3u8-rs = "5.0.4"
reqwest = "0.11.18"
scraper = "0.17.1"
tokio = {version = "1.29.1", features = ["full"]}
